# MegEngine

./: .gitignore  CMakeLists.txt  copyfile.sh
cmake/: xnnpack.cmake
cmake/Modules/: Findxnnpack.cmake
dnn/include/megdnn/: handle.h
dnn/src/: CMakeLists.txt
dnn/src/common/: handle.cpp  relayout_helper.h
dnn/src/wasm/: handle.cpp  handle.h
dnn/src/wasm/batched_matrix_mul/: algos.cpp  algos.h  opr_impl.cpp  opr_impl.h
dnn/src/wasm/conv_bias/: algos.cpp  algos.h  common.h  opr_impl.cpp  opr_impl.h
dnn/src/wasm/conv_bias/conv1x1/: algos.cpp  algos.h  algos_conv1x1_gemv.cpp  algos_conv1x1_gemv.h  conv1x1_dispatcher.h  conv1x1_strategy.cpp  conv1x1_strategy.h  conv1x1_utils.cpp  conv1x1_utils.h
dnn/src/wasm/conv_bias/im2col/: algos.cpp  algos.h  factory.h  im2col_kerns.h  postprocess_helper.h  strategy_base.h  strategy_default.cpp  strategy_default_nchw44.cpp  strategy_nopack.cpp  strategy_onlypacka.cpp
dnn/src/wasm/convolution/: algos.cpp  algos.h  col2img_helper.h  img2col_helper.h  opr_impl.cpp  opr_impl.h  run_conv.cpp  run_conv.h
dnn/src/wasm/elemwise/: opr_impl.cpp  opr_impl.h
dnn/src/wasm/elemwise/kimpl/: abs.cpp  add.cpp  binary.h  binary_base.cpp  binary_base.h  ceil.cpp  div.cpp  floor.cpp  max.cpp  min.cpp  mul.cpp  relu.cpp  round.cpp  sigmoid.cpp  sub.cpp  unary.h  unary_base.cpp  unary_base.h
dnn/src/wasm/matrix_mul/: algos.cpp  algos.h  gemm_common.h  gemm_impl.h  gemv.h  generic_strategy.cpp  generic_strategy.h  opr_impl.cpp  opr_impl.h
dnn/test/: CMakeLists.txt
dnn/test/wasm/: convolution.cpp  elemwise.cpp  fixture.cpp  fixture.h  matrix_mul.cpp
imperative/python/megengine/quantization/: internal_fake_quant.py
imperative/python/src/: tensor.cpp
megenginejs/: .gitignore  .npmignore  CMakeLists.txt  README.md  karma.conf.js  package.json  rollup.config.js  tsconfig.json  tsconfig.test.json
megenginejs/example/linear_regression/: README.md  index.html  package.json  webpack.config.js
megenginejs/example/linear_regression/src/: index.js
megenginejs/example/mnist/: mnist.mge  package.json  webpack.config.js
megenginejs/example/mnist/src/: gen.js  index.js  mnist.js
megenginejs/example/model_executor/: README.md  package.json  webpack.config.js
megenginejs/example/model_executor/src/: index.js  test.txt  xornet_deploy.mge
megenginejs/example/node/: README.md  main.mjs  package.json
megenginejs/example/playground/: package.json  webpack.config.js
megenginejs/example/playground/src/: index.js
megenginejs/impl/interpreter/: interpreter_impl.cpp
megenginejs/impl/profiler/: states.h
megenginejs/include/megbrain/imperative/ops/: utility.h
megenginejs/js/megengine/: backend.ts  dtypes.ts  engine.ts  grad_manager.ts  index.ts  main.ts  main_test.ts  model_executor.ts  tensor.ts  utils.ts  wasm_dtypes.d.ts  wasm_engine.d.ts
megenginejs/js/megengine/api/: base.ts  tensor.ts
megenginejs/js/megengine/io/: file.ts  index.ts  io_utils.ts  local_storage.ts  weight_handler.ts
megenginejs/js/megengine/loss/: cross_entropy.ts  index.ts  mse.ts
megenginejs/js/megengine/modules/: activation.ts  conv.ts  index.ts  linear.ts  module.ts  pool.ts
megenginejs/js/megengine/optimizers/: base.ts  index.ts  sgd.ts
megenginejs/js/megengine/test/: baskward_test.ts  generator_test.ts  init_test.ts  io_test.ts  module_test.ts  operator_test.ts  shape_test.ts
megenginejs/js/src/: engine.cpp  engine.h  grad.cpp  grad.h  grad_info.h  grad_override.cpp  intrusive_list.h  model_executor.cpp  model_executor.h  temp.txt  tensor.cpp  tensor.h  trace_info.h  utils.cpp  utils.h  webassembly.cpp
megenginejs/scripts/: build-wasm.sh  patch-threaded-simd-module.js  patch-worker-module.js
megenginejs/tablegen/: CMakeLists.txt  autogen.cpp  setupfs.h.in
megenginejs/wasm-out/: meg.d.ts
megjs/: CMakeLists.txt
megjs/impl/: tensor.cpp  tensor.h  trace_info.h  webassembly.cpp
megjs/include/megbrain/: webassembly.h
megjs/tablegen/: autogen.cpp  setupfs.h.in
scripts/cmake-build/: em_build.sh  host_build.sh
scripts/whl/macos/: macos_whl_env_prepare.sh
src/: CMakeLists.txt  megbrain_build_config.h.in
src/core/impl/: common.cpp  system.cpp  webassembly.cpp
src/core/include/megbrain/: exception.h  webassembly.h
